After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707584 - mutter-wayland configure should check for pam
mutter-wayland configure should check for pam
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-05 18:36 UTC by Olav Vitters
Modified: 2013-09-10 13:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mutter-launch: remove PAM usage (1.24 KB, patch)
2013-09-10 08:13 UTC, Giovanni Campagna
committed Details | Review

Description Olav Vitters 2013-09-05 18:36:12 UTC
CC       meta-wayland-pointer.lo
  CC       meta-wayland-seat.lo
  CC       meta-wayland-stage.lo
  CC       meta-wayland-surface.lo
  CC       meta-weston-launch.lo
  CC       mutter.o
  CC       mutter_launch-weston-launch.o
  CC       testboxes.o
  CC       testgradient.o
wayland/weston-launch.c:53:31: fatal error: security/pam_appl.h: No such file or directory
 #include <security/pam_appl.h>


This should be checked at configure stage.
Comment 1 Giovanni Campagna 2013-09-10 08:13:26 UTC
Created attachment 254560 [details] [review]
mutter-launch: remove PAM usage

Left-overs from the weston-launch import
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-09-10 13:30:04 UTC
Review of attachment 254560 [details] [review]:

LG.
Comment 3 Giovanni Campagna 2013-09-10 13:56:26 UTC
Attachment 254560 [details] pushed as 3e341e8 - mutter-launch: remove PAM usage