mutter-launch: remove PAM usage

Left-overs from the weston-launch import

https://bugzilla.gnome.org/show_bug.cgi?id=707584